--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,11 +1,26 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-<h:head>
-  <title>Facelet Title</title>
-</h:head>
-<h:body>
-  Hallo Welt!!!
-</h:body>
-</html>
+<?xml version='1.0' encoding='utf-8' ?>
+<!DOCTYPE html>
+<html 	xmlns="http://www.w3.org/1999/xhtml"
+		xmlns:h="http://xmlns.jcp.org/jsf/html"
+		xmlns:f="http://xmlns.jcp.org/jsf/core"
+		xmlns:p="http://primefaces.org/ui"
+		lang="de">
+	
+	<h:head>
+		<title>Shea Sepherd - Geisternetze</title>
+	</h:head>
+	<h:body>
+    	<h1>Shea Sepherd - Meldung von Geisternetzen</h1>
+    	<h3>Wilkommen im Webformular zur Meldung und Bergung von Geisternetzen auf der ganzen Welt.</h3>
+    	<h:form>
+    		<p:commandButton value="Netze melden" 
+                     		 icon="pi pi-plus" 
+                     		 action="meldeNetz" 
+                     		 style="margin-right:10px;" />
 
+    		<p:commandButton value="Netze bergen" 
+                    		 icon="pi pi-search" 
+                     		 action="login" />
+		</h:form>	
+	</h:body>
+</html>
